# FastAPI_Docker

./: Dockerfile  Dockerize fastapi app.md  README.md  index.html  main.py  model.py  pyproject.toml  requirements.txt
